--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.Newsforest.android.Newsforest"
         minSdkVersion 19
         targetSdkVersion 19
-        versionCode 10
-        versionName "2.2.0.1"
+        versionCode 12
+        versionName "2.3"
     }
     buildTypes {
         release {
@@ -46,4 +46,6 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpmime:4.2.3'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
 }
