--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,9 @@ android {
     defaultConfig {
         applicationId "com.Newsforest.android.Newsforest"
         minSdkVersion 19
-        targetSdkVersion 19
-        versionCode 13
-        versionName "2.3.3"
+        targetSdkVersion 26
+        versionCode 14
+        versionName "2.4.0"
     }
     buildTypes {
         release {
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:cardview-v7:26.0.0'
     implementation 'com.android.support:support-v4:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -44,7 +45,7 @@ dependencies {
     implementation files('libs/org-apache-commons-codec.jar')
     implementation files('libs/httpclient-4.2.3.jar')
     implementation 'org.apache.httpcomponents:httpmime:4.2.3'
-    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
